@@ -1,3 +1,9 @@
 # ESOF3050_Project
 
-# This will be the source code for our project
+This will be the source code for our project
+
+If having issues running code:
+ - Go to Run > Run As Configurations
+ - Then go to Arguments tab and copy --module-path "\path\to\javafx-sdk-12.0.1\lib" --add-modules javafx.controls,javafx.fxml into the VM Arguments
+ - Apply
+ - Run
